tests/diagnostics/tests/ui/non_fastwritable.stderr
error[E0277]: the trait bound `Foo: askama::FastWritable` is not satisfied
  --> tests/ui/non_fastwritable.rs:12:20
   |
12 |     type Content = Foo;
   |                    ^^^ unsatisfied trait bound
   |
help: the trait `askama::FastWritable` is not implemented for `Foo`
  --> tests/ui/non_fastwritable.rs:6:1
   |
 6 | struct Foo;
   | ^^^^^^^^^^
   = help: the following other types implement trait `askama::FastWritable`:
             &T
             &mut T
             AAttrs
             AreaAttrs
             Areas
             Arguments<'_>
             AudioAttrs
             BaseAttrs
           and $N others
note: required by a bound in `granola::html::SpanRecipe::Content`
  --> $WORKSPACE/crates/granola/src/html/elements/text_semantics/span.rs
   |
   | #[derive(Debug, Clone, Default, Template, Granola, Recipe)]
   |                                                    ^^^^^^ required by this bound in `SpanRecipe::Content`
   = note: this error originates in the derive macro `Recipe` (in Nightly builds, run with -Z macro-backtrace for more info)
